fix footer overflow while keeping text alignment

--- a/index.css
+++ b/index.css
@@ -131,6 +131,7 @@ body.darwin .close {
   position: absolute;
   bottom: 0;
   text-align: center;
+  width: calc(100% - 2em);
   font-size: 12px;
   color: #999;
 }
